# task-manager

./: .gitignore  AGENTS.md  PLAN.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
.grok/skills/task-manager/: SKILL.md
.grok/skills/task-manager/scripts/: setup.sh  start-server.sh  stop-server.sh  task-tui.sh  task.sh
api/: __init__.py  config.py  database.py  db_models.py  dependencies.py  main.py
api/crud/: boards.py  cards.py  lists.py
api/routers/: boards.py  cards.py  health.py  lists.py
cli/: __init__.py  client.py  config.py  formatters.py  main.py
cli/commands/: boards.py  cards.py  lists.py
scripts/: setup.sh  start-server.sh  task-tui.sh  task.sh
shared/: __init__.py  enums.py  models.py  schemas.py  socket.py
tests/: conftest.py
tests/api/: test_boards.py  test_cards.py  test_health.py  test_lists.py  test_workflows.py
tests/cli/: test_boards.py  test_cards.py  test_lists.py
tui/: __init__.py  api_client.py  app.py  config.py  styles.py
tui/modals/: __init__.py  confirm_delete.py  create_board.py  create_card.py  create_list.py  move_card.py
tui/widgets/: __init__.py  board_view.py  card_widget.py  list_column.py
