[project]
name = "task-manager"
version = "0.1.0"
description = "AI-agent-first Trello-like task manager"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "textual>=3.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
task = "cli.main:cli"
task-tui = "tui.app:main"
task-server = "api.main:serve"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["api", "shared"]
core = "sysmon"

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.hatch.build.targets.wheel]
packages = ["api", "cli", "shared", "tui"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
